--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "jest": "^28.1.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
